# ZayasAgents

./: README.md  create_internationals_payments.sh  create_midjourney_structure.sh  create_sql_project.sh  create_structure.sh  create_trading_floor.sh
agentic-ai-engineer/: .flake8  .pre-commit-config.yaml  .pylintrc  README.md  advanced_agent_creator.py  agent_creator.py  agent_manager.py  config.json  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt
agentic-ai-engineer/scripts/: run_linters.sh  setup.sh
agentic-ai-sql-project/: Makefile  README.md
agentic-engineering-team/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  agents.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh  tasks.py
agentic-research/: Instructions.md  README.md  requirements.txt
avatar-video/: README.md  main.py
browser-sidekick/: .eslintrc.js  .flake8  .pre-commit-config.yaml  README.md  package.json  pyproject.toml  requirements-dev.txt  setup.sh
career-digital-twin/: .flake8  .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
international-payments/: README.md
midjourney-ai-engine/: README.md  index.html  package.json
research_agents/: .gitignore  .pre-commit-config.yaml  README.md  main.py  requirements-dev.txt  requirements.txt  setup.py  setup.sh  setup_project.sh
stock_picker_agent/: .env  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  config.py  enhanced_stock_picker.py  main.py  mypy.ini  quick_start.py  requirements-dev.txt  requirements.txt  setup_project.sh
terraform-app-infrastructure/: dns.tf  (+7 more)
(+79 files in other folders)
